# telnet-zine

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  project.clj
.clj-kondo/.cache/v1/clj/: clojure.core.protocols.transit.json  clojure.core.reducers.transit.json  clojure.core.server.transit.json  clojure.core.specs.alpha.transit.json  clojure.core.transit.json  clojure.data.transit.json  clojure.datafy.transit.json  clojure.edn.transit.json  clojure.inspector.transit.json  clojure.instant.transit.json  clojure.java.browse-ui.transit.json  clojure.java.browse.transit.json  clojure.java.io.transit.json  clojure.java.javadoc.transit.json  clojure.java.shell.transit.json  clojure.main.transit.json  clojure.parallel.transit.json  clojure.pprint.transit.json  clojure.reflect.transit.json  clojure.repl.transit.json  clojure.set.transit.json  clojure.spec.alpha.transit.json  clojure.spec.gen.alpha.transit.json  clojure.spec.test.alpha.transit.json  clojure.stacktrace.transit.json  clojure.string.transit.json  clojure.template.transit.json  clojure.test.junit.transit.json  clojure.test.tap.transit.json  clojure.test.transit.json  clojure.uuid.transit.json  (+24 more)
.lsp/.cache/: db.transit.json
doc/: intro.md
examples/example-zine/: cover.txt  front.txt  index.json
examples/example-zine/example1/: 1.txt
examples/example-zine/example2/: 1.txt  2.txt
lib/libtelnet-0.23/: Makefile.in  configure
src/: helpers.rs  main.c  main.rs  telnet.c  telnet.h  telnet.rs  zine.rs  zine_handler.rs
src/telzine/: core.clj  server.clj
test/telzine/: core_test.clj
