[package]
name = "telzine"
version = "0.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.26.1"
handlebars = "4.3.6"
structopt = "0.3.26"
chrono = "0.4.24"